<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.faisal.supermom.MainActivity"
    android:background="@drawable/sign_up_new_bg"

    >

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="Sign up"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimaryDark"

        android:textSize="40dp"
        android:fontFamily="cursive"
        android:textStyle="bold"

        />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:padding="5dp"

        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">


        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="Username"
            android:inputType="textPersonName"
            android:layout_above="@+id/linearLayout2"
            android:layout_alignParentStart="true"
            android:textAlignment="center"
            android:textStyle=""


            />

        <EditText
            android:id="@+id/emailID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"


            />

        <EditText
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:id="@+id/passwordID"
            android:textAlignment="center"
            android:inputType="textPassword"

            />

        <EditText
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:id="@+id/confirmPasswordID"
            android:textAlignment="center"
            android:inputType="textPassword"



            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signUpBtn"
            android:text="Sign Up"
            android:onClick="methodSignUp"
            android:background="@drawable/button_circle_radius"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="#ffff"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="already have an account? sign in here"
            android:textAlignment="center"
            android:layout_margin="20dp"
            android:id="@+id/alreadyAccount"
            android:textColor="#040405"

            />
    </LinearLayout>




</RelativeLayout>
