<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.faisal.supermom.AdminAddBabyInfoActivity"

    android:background="@drawable/admin_newsfeed_bg"

    >


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/newsfeed"
        android:padding="5dp"
        android:textAlignment="center"
        android:fontFamily="cursive"
        android:textColor="@color/colorwhite"
        android:textSize="40dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/infoHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/addInformationHeadline"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:padding="5dp"
        android:textAlignment="center"

        android:textColor="@color/colororange1"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"


        />

    <EditText
        android:id="@+id/addInformationHeadlineID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:hint="@string/add_headline"
        android:layout_alignBaseline="@+id/infoHeadline"
        android:layout_alignBottom="@+id/infoHeadline"
        android:layout_toEndOf="@+id/infoHeadline"
        android:padding="5dp"
        android:textColor="@color/colorwhite"
        android:textColorHint="@color/colorwhite"
        />

    <TextView
        android:id="@+id/addInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/infoHeadline"
        android:layout_marginTop="15dp"
        android:text="@string/add_info"

        android:textColor="@color/colororange1"
        android:textStyle="bold"

        />

    <EditText
        android:id="@+id/addInformationID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addInformationHeadlineID"
        android:layout_alignStart="@+id/addInformationHeadlineID"
        android:inputType="textPersonName"
        android:hint="@string/add_information"

        android:textColor="@color/colorwhite"
        android:textColorHint="@color/colorwhite"
         />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addInformationID"
        android:id="@+id/btnBrowseImageID"
        android:text="select image from gallery"
        android:layout_marginTop="10dp"

        android:background="@drawable/button_circle_radius"
        android:alpha=".7"
        android:textColor="@color/colorwhite"

        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/adminShowImageWhenPickedID"


        android:layout_below="@+id/btnBrowseImageID"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/adminGiveImageNameID"
        android:layout_below="@+id/adminShowImageWhenPickedID"
        android:hint="add image name"
        android:textAlignment="center"

        android:textColor="@color/colorwhite"
        android:textColorHint="@color/colorwhite"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adminGiveImageNameID"
        android:text="Save"
        android:id="@+id/processSaveBabyInfoBtnID"

        android:background="@drawable/button_circle_radius"
        android:alpha=".7"
        android:textColor="@color/colorwhite"


        />






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/processSaveBabyInfoBtnID"
        android:id="@+id/menuForAdminID"
        android:layout_marginTop="5dp"
        >

        <TextView
            android:id="@+id/goToAddNewsfeedInfoPageID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Newsfeed info"


            android:background="#DE5448"
            android:textColor="@color/colorwhite"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="14dp"

            android:layout_marginLeft="50dp"

            />

        <TextView
            android:id="@+id/goToAddDoctorInfoPageID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Doctor Info"



            android:background="#DE5448"
            android:textColor="@color/colorwhite"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="14dp"

            android:layout_marginLeft="50dp"

            />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        android:id="@+id/menuForAdmin2ID"
        android:layout_marginTop="3dp"


        android:layout_below="@+id/menuForAdminID"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="36dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/goToUpdateNewsfeedInfoPageID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Update newsfeed"


            android:background="#DE5448"
            android:textColor="@color/colorwhite"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="14dp"

            android:layout_marginLeft="50dp"

            />


        <TextView
            android:id="@+id/goToUpdateDoctorInfoID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"


            android:background="#DE5448"
            android:padding="10dp"
            android:text="Update Doctor"
            android:textColor="@color/colorwhite"
            android:textSize="14dp"
            android:textStyle="bold" />


    </LinearLayout>



    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menuForAdmin2ID"
        android:id="@+id/showBabyInfoListID"
        >


    </ListView>

    <TextView
        android:id="@+id/logOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView2"
        android:text="Logout"

        android:textColor="@color/colorwhite"
        android:background="@drawable/button_circle_radius"
        android:padding="8dp"
        />


</RelativeLayout>
